[package]
name = "cita-cli"
version = "0.19.2"
authors = ["piaoliu <441594700@qq.com>", "Qian Linfeng <thewawar@gmail.com>"]
build = "build.rs"

[dependencies]
dotenv = "^0.13.0"
clap = "^2.31.2"
ansi_term = "^0.11.0"
colored = "^1.6.0"
atty = "^0.2.10"
serde = "^1.0.66"
serde_json = "^1.0.17"
shell-words = "^0.1.0"
rustyline = "^2.1.0"
cita-tool = { path = "../cita-tool" }
dirs = "^1.0.3"
regex = "^1.0.4"
## lazy_static = "^1.0"

[build-dependencies]
git2 = "^0.7.5"

[features]
default = []
ed25519 = ["cita-tool/ed25519"]
tls = ["cita-tool/tls"]
