[package]
name = "cita-cli"
version = "20.2.0"
authors = ["piaoliu <441594700@qq.com>", "Qian Linfeng <thewawar@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
dotenv = "^0.13.0"
clap = "^2.31.2"
ansi_term = "^0.11.0"
colored = "^1.6.0"
atty = "^0.2.10"
serde = "^1.0.66"
serde_json = "^1.0.17"
shell-words = "^0.1.0"
rustyline = "^5.0.2"
cita-tool = { path = "../cita-tool", default-features = false }
dirs = "^2.0.0"
regex = "^1.0.4"
## lazy_static = "^1.0"

[features]
default = ["rustls"]
openssl = ["cita-tool/openssl"]
rustls = ["cita-tool/rustls"]
