[package]
name = "cita-tool"
version = "0.19.0"
authors = ["piaoliu <441594700@qq.com>", "Qian Linfeng <thewawar@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "^0.12.1"
tokio = "^0.1.7"
futures = "^0.1"
serde_json = "^1.0.17"
serde = "^1.0.53"
serde_derive = "^1.0.53"
protobuf = "^2.0.2"
hex = "^0.3.2"
tiny-keccak = "^1.4.2"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", rev = "db81cfea59014b4d176f10f86ed52e1a130b6822" }
blake2b  = { git = "https://github.com/cryptape/cita-common", branch = "develop", optional = true }
sodiumoxide = { version = "^0.1.0", optional = true }
libsm = { git = "https://github.com/cryptape/libsm" }
# rename to types
types = { version = "^0.4.0", package = "ethereum-types"}
lazy_static = "^1.0"
rand = "^0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "^0.1.1"
ethabi = "^6.0"
tool-derive = { path = "../tool-derive" }
hyper-tls = { version = "^0.3", optional = true }

[features]
default = []
ed25519 = ["blake2b", "sodiumoxide"]
tls = ["hyper-tls"]
